# grtb-ocr

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
grtb_ocr/: __main__.py
grtb_ocr/core/: ocr.py
