[project]
name = "grtb_ocr"
version = "0.1.0"
description = "telegram bot for OCR"
authors = [
    {name = "GRTeamBoss",email = "rabbitwow97@gmail.com"}
]
license = {text = ""}
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "python-doctr (>=0.11.0,<0.12.0)",
    "numpy (>=1.26.4,<1.27.0)",
]
packages = [{include = "grtb_ocr"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
